5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1590_2894.log
== TEST (2019-03-20 14:56:38) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print(45) = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 8
    total = ?????
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 14:57:42) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print(45) = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = print(45)

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 5
    print(45) = float(input())
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 14:58:23) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
total = float(input("45"))

# Calculo do valor a ser pago, incluindo o frete:
total = print(45)

# Impressao do valor total:
print(total)
-- OUTPUT:
45
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 14:58:36) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
total = float(input("45"))

# Calculo do valor a ser pago, incluindo o frete:
total = print(45)

# Impressao do valor total:
print(total)
-- OUTPUT:
45
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 14:58:40) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
total = float(input("45"))

# Calculo do valor a ser pago, incluindo o frete:
total = print(45)

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.125454
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
45
None
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
45
None
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
45
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 14:58:49) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
total = float(input(45))

# Calculo do valor a ser pago, incluindo o frete:
total = print(45)

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.116784
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
4545
None
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
4545
None
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
4545
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:07:01) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("preco do jogo"))

# Calculo do valor a ser pago, incluindo o frete:
total = print(print(8*45)*var)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = print(print(8*45)*var)
TypeError: unsupported operand type(s) for *: 'NoneType' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:12:44) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(50))

# Calculo do valor a ser pago, incluindo o frete:
total = print(print(var*8 + 45)

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 11
    print(total)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:13:07) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(50))

# Calculo do valor a ser pago, incluindo o frete:
total = print(print(var*8 + 45)

# Impressao do valor total:
print(float("total"))
-- ERROR:
File "XXXX", line 11
    print(float("total"))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:13:17) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(50))

# Calculo do valor a ser pago, incluindo o frete:
total = print(print(var*8 + 45)

# Impressao do valor total:
print(float(total))
-- ERROR:
File "XXXX", line 11
    print(float(total))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:13:34) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(50))

# Calculo do valor a ser pago, incluindo o frete:
total = print(print(var*8 + 45)

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 11
    print(total)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:13:43) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(50))

# Calculo do valor a ser pago, incluindo o frete:
total = print(print(var*8 + 45)

# Impressao do valor total:
print("total")
-- ERROR:
File "XXXX", line 11
    print("total")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:14:15) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(50))

# Calculo do valor a ser pago, incluindo o frete:
total = print(print(var*8 + 45)

# Impressao do valor total:

-- ERROR:
File "XXXX", line 11
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:14:22) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(50))

# Calculo do valor a ser pago, incluindo o frete:
total = print(print(var*8 + 45)

# Impressao do valor total:
-- ERROR:
File "XXXX", line 11
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:14:46) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(50))

# Calculo do valor a ser pago, incluindo o frete:
total = print(print(var*8 + 45)

# Impressao do valor total:
float(total)
-- ERROR:
File "XXXX", line 11
    float(total)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:18:20) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo? "))
var2 = var1 * 8 + 45
# Calculo do valor a ser pago, incluindo o frete:
total = input

# Impressao do valor total:
print(var2)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:18:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo? "))
var2 = var1 * 8 + 45
# Calculo do valor a ser pago, incluindo o frete:
total = input

# Impressao do valor total:
print(var2)
-- EXECUTION TIME:
0.134245
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:52:30) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo? "))
var2 = var1 * 8 + 45
# Calculo do valor a ser pago, incluindo o frete:
total = input

# Impressao do valor total:
print(var2)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:09:23) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo? "))
var2 = var1 * 8 + 45
# Calculo do valor a ser pago, incluindo o frete:
total = input

# Impressao do valor total:
print(var2)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
